infra/elastic-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-search
  namespace: avigoldshtein-dev
spec:
  selector:
    matchLabels:
      app: elastic-search
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elastic-search
    spec:
      containers:
      - image: avigoldshtein/week_12_elastic_search_malicious_text:latest
        name: elastic-search
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: elastic-search
