infra/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: avigoldshtein-dev
spec:
  selector:
    matchLabels:
      app: es
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
        name: es
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: es
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
