infra/elastic-search-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-search
  namespace: avigoldshtein-dev
spec:
  selector:
    app: elastic-search
  ports:
    - name: elastic-search
      protocol: TCP
      port: 8000
      targetPort: 8000
