infra/es-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: avigoldshtein-dev
spec:
  selector:
    app: es
  ports:
    - name: es
      protocol: TCP
      port: 9200
      targetPort: 9200
