infra/elastic-search-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elastic-search
  namespace: avigoldshtein-dev
spec:
  to:
    kind: Service
    name: elastic-search
  port:
    targetPort: 8000
  tls:
    termination: edge
